<resources>
    <string name="app_name">YoyoMoyo\nStok</string>
    <string name="header_number">#</string>
    <string name="header_name">İsim</string>
    <string name="header_code">Ürün Kodu</string>
    <string name="header_count">Adet</string>
    <string name="header_source">Kaynak</string>
    <string name="copy_msg">copied</string>
    <string name="msg_title_add_product">Ürün Ekle</string>
    <string name="msg_add_product">Tek ürün ekle</string>
    <string name="msg_title_add_csv">Csv Ekle</string>
    <string name="msg_add_csv">Csv den ürün yüklemek için tıklayınız</string>
    <string name="msg_title_add_excel">Excel Ekle</string>
    <string name="msg_add_excel">Excel dosyası eklemek için tıklayınız</string>
    <string name="title_choose_file">Dosyalar</string>
    <string name="msg_empty_product">Ürün Yok</string>
    <string name="msg_empty_product_msg">Kayıtlı ürün yok eklemek için tıklayınız.</string>
    <string name="msg_search">Ara</string>
    <string name="text_bold">bold</string>
    <string name="msg_settings_product_view">Görüntüle</string>
    <string name="msg_settings_product_edit">Düzenle</string>
    <string name="msg_settings_product_delete">Sil</string>
    <string name="msg_product_code">Ürün Kodu:</string>
    <string name="msg_barcode">Barkod</string>
    <string name="msg_name">İsim</string>
    <string name="msg_stock">Stok</string>
    <string name="msg_source">Temin edildiği yer</string>
    <string name="msg_edit">Düzenle</string>
    <string name="msg_delete">Sil</string>
    <string name="msg_save">Kaydet</string>
    <string name="error_required_field">Bu alan gereklidir!</string>
    <string name="msg_fee">Fiyat</string>
    <string name="header_fee">Fiyat</string>
</resources>
