<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="horizontal"
              android:paddingBottom="8dp"
              android:paddingTop="8dp">
    <TextView android:id="@+id/tvOrder"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1.2"
              android:text="@string/header_number"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>

    <TextView android:id="@+id/tvProductCode"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/header_code"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>

    <TextView android:id="@+id/tvName"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/header_name"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>

    <TextView android:id="@+id/tvStock"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/header_count"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>

    <TextView android:id="@+id/tvFee"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/header_count"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>

    <TextView android:id="@+id/tvSource"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:text="@string/header_source"
              android:textAlignment="center"
              android:textColor="@android:color/black"/>

</LinearLayout>