<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:animateLayoutChanges="true"
              android:background="@android:color/white"
              android:orientation="vertical"
              android:padding="16dp">


    <LinearLayout
        android:id="@+id/nameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_name"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_product_code"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/barcodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_barcode"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvBarcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_product_code"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/productCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_product_code"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvProductCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_product_code"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/stockLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_stock"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvStock"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_product_code"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sourceLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_source"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tvSource"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="@string/text_bold"
            android:text="@string/msg_product_code"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/black_border"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:tag="@string/text_bold"
            android:text="@string/msg_edit" android:textColor="@android:color/holo_blue_dark"/>
        <View android:layout_width="2dp" android:layout_height="24dp"
              android:background="@android:color/black"/>
        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:tag="@string/text_bold"
            android:text="@string/msg_delete"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark" android:textStyle="bold"/>

    </LinearLayout>


</LinearLayout>


