<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/zxing_transparent"
              android:orientation="vertical"
              android:padding="10dp">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">
        <LinearLayout android:id="@+id/btnView"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="?attr/selectableItemBackground"
                      android:clickable="true"
                      android:gravity="center"
                      android:orientation="horizontal"
                      android:padding="8dp">
            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                app:materialIcon="book_open_page_variant"
                app:materialIconColor="@android:color/darker_gray"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:tag="@string/text_bold"
                      android:text="@string/msg_settings_product_view"
                      android:textAlignment="center"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/large_size"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">
        <LinearLayout android:id="@+id/btnEdit"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="?attr/selectableItemBackground"
                      android:clickable="true"
                      android:gravity="center"
                      android:orientation="horizontal"
                      android:padding="8dp">

            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                app:materialIcon="pencil"
                app:materialIconColor="@android:color/holo_blue_dark"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:tag="@string/text_bold"
                      android:text="@string/msg_settings_product_edit"
                      android:textAlignment="center"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/large_size"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_weight="1"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp">
        <LinearLayout android:id="@+id/btnDelete"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:background="?attr/selectableItemBackground"
                      android:clickable="true"
                      android:gravity="center"
                      android:orientation="horizontal"
                      android:padding="8dp">
            <net.steamcrafted.materialiconlib.MaterialIconView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:background="?attr/selectableItemBackground"
                android:padding="4dp"
                app:materialIcon="delete"
                app:materialIconColor="@android:color/holo_red_dark"/>
            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:tag="@string/text_bold"
                      android:text="@string/msg_settings_product_delete"
                      android:textAlignment="center"
                      android:textColor="@android:color/black"
                      android:textSize="@dimen/large_size"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>

